// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches shallow snapshot 1`] = `
<div>
  <Memo(Connect(MetaTags))
    description="Yet another webapp based on Dr. Pogodin's React Starter Kit"
    title="Dr. Pogodin's React Starter"
  />
  <ReactTooltip
    clickable={false}
    insecure={true}
    resizeHide={true}
    wrapper="div"
  />
  <Routes />
</div>
`;

exports[`Matches shallow snapshot in dev mode 1`] = `
<div>
  <Memo(Connect(MetaTags))
    description="Yet another webapp based on Dr. Pogodin's React Starter Kit"
    title="Dr. Pogodin's React Starter"
  />
  <ReactTooltip
    clickable={false}
    insecure={true}
    resizeHide={true}
    wrapper="div"
  />
  <Routes />
  <DevTools />
</div>
`;
